--- a/3-microservices with spring-cloud/config-server/src/main/resources/application.yml
+++ b/3-microservices with spring-cloud/config-server/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/nagabhushanamn/micro-in-GL
+          uri: https://github.com/nagabhushanamn/micro-in-cap
           clone-on-start: true
           search-paths:
-          - 'config-repo'
+          - '3-microservices with spring-cloud/0-config-repo'
  
  
                     
