--- a/3-microservices with spring-cloud/catalog/src/main/resources/bootstrap.yml
+++ b/3-microservices with spring-cloud/catalog/src/main/resources/bootstrap.yml
@@ -12,9 +12,5 @@ spring:
       
   profiles:
     active: 
-    - blr  
+    - default  
 
-eureka:
-  client:
-    service-url: 
-      defaultZone: http://localhost:8002/eureka    
