--- a/3-microservices with spring-cloud/catalog/src/main/resources/application.yml
+++ b/3-microservices with spring-cloud/catalog/src/main/resources/application.yml
@@ -22,3 +22,10 @@ spring:
       ddl-auto: create  
       
       
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - '*'    
